attempt to fix images overflowing from divs

--- a/css/main.css
+++ b/css/main.css
@@ -33,18 +33,13 @@ html, body {
     scroll-behavior: smooth;
 }
 
-@media (max-width: 800px) {
-    html, body {
-        overflow-x: hidden;
-    }
-}
-
 body {
     font-family: "Young Serif";
+    display: block;
     text-align: center;
     image-rendering: pixelated;
     width: 100%;
-    margin: 0;
+    margin: auto;
     background-color: black;
 }
 
@@ -71,24 +66,31 @@ body {
 }
 
 .gallery {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+    display: block;
     width: 90%;
-    padding: 0;
     margin: auto;
     font-size: large;
     clear: both;
 }
 
-div.gallery img {
+.art-piece {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
     margin-top: 2rem;
-    width: 100%;
+    height: 100%;
+    max-width: 100%;
+}
+
+.art-piece img {
+    display: block;
     max-width: 810px;
+    width: 100%;
+    height: 100%;
+    margin: 0;
     border-style: ridge;
-    box-shadow: black;
-    box-shadow: 4px 4px;
+    box-shadow: 4px 4px black;
 }
 
 .footer {
